[gd_scene load_steps=8 format=3 uid="uid://c0m0xh38p6b7f"]

[ext_resource type="Script" path="res://logic/level/level_manager.gd" id="1_dfdfb"]
[ext_resource type="Script" path="res://logic/manager/ElasticManager.gd" id="2_fd1xy"]
[ext_resource type="PackedScene" uid="uid://b3idupd13qhq4" path="res://logic/game/post.tscn" id="3_txh4p"]
[ext_resource type="PackedScene" uid="uid://vperkf507vv0" path="res://logic/game/character2.tscn" id="4_wvo76"]
[ext_resource type="Script" path="res://ui/ElasticSize.gd" id="5_r2ufr"]
[ext_resource type="Script" path="res://logic/level/EnemySpawner.gd" id="6_fdeo5"]
[ext_resource type="PackedScene" uid="uid://cr5dttaeduat" path="res://logic/game/enemy/dumb.tscn" id="7_kwkrj"]

[node name="World" type="Node2D"]
script = ExtResource("1_dfdfb")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Elastic" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("2_fd1xy")
player = NodePath("../Character2")

[node name="Post" type="Node2D" parent="Elastic"]

[node name="Post" parent="Elastic/Post" instance=ExtResource("3_txh4p")]
position = Vector2(153, 151)

[node name="Post2" parent="Elastic/Post" instance=ExtResource("3_txh4p")]
position = Vector2(284, 350)

[node name="Post3" parent="Elastic/Post" instance=ExtResource("3_txh4p")]
position = Vector2(455, 182)

[node name="Line2D" type="Line2D" parent="Elastic"]
points = PackedVector2Array(0, 0, 0, 0, 0, 0)
width = 2.0

[node name="Character2" parent="." instance=ExtResource("4_wvo76")]
position = Vector2(241, 201)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 21.0
offset_right = 61.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
fit_content = true
autowrap_mode = 0
script = ExtResource("5_r2ufr")

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("6_fdeo5")

[node name="EnemySpawnTimer" type="Timer" parent="EnemySpawner"]
wait_time = 2.0
autostart = true

[node name="SpawnPos" type="Marker2D" parent="EnemySpawner"]
position = Vector2(303, 92)

[node name="Entities" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="Entities"]

[node name="Posts" type="Node2D" parent="Entities"]

[node name="Coins" type="Node2D" parent="Entities"]

[node name="Dumb" parent="." instance=ExtResource("7_kwkrj")]
position = Vector2(340, 263)

[connection signal="timeout" from="EnemySpawner/EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
